syntax = "proto3";
package estudiantes;

import "google/protobuf/empty.proto";

// Mensaje que representa un estudiante
message Estudiante {
    string ci = 1;
    string nombres = 2;
    string apellidos = 3;
    string carrera = 4;
}

// Mensaje que representa un curso
message Curso {
    string codigo = 1;
    string nombre = 2;
    string docente = 3;
}

// Solicitud para obtener un estudiante por CI
message EstudianteRequest {
    string ci = 1;
}

// Solicitud para obtener un curso por código
message CursoRequest {
    string codigo = 1;
}

// Mensaje para inscripción
message InscripcionRequest {
    string ci_estudiante = 1;
    string codigo_curso = 2;
}

// Respuesta con un estudiante
message EstudianteResponse {
    Estudiante estudiante = 1;
}

// Respuesta con un curso
message CursoResponse {
    Curso curso = 1;
}

// Respuesta de inscripción
message InscripcionResponse {
    bool success = 1;
    string message = 2;
}

// Lista de estudiantes
message EstudiantesList {
    repeated Estudiante estudiantes = 1;
}

// Lista de cursos
message CursosList {
    repeated Curso cursos = 1;
}

// Servicio
service EstudianteService {
    rpc AgregarEstudiante(Estudiante) returns (EstudianteResponse);
    rpc AgregarCurso(Curso) returns (CursoResponse);
    rpc InscribirEstudiante(InscripcionRequest) returns (InscripcionResponse);
    rpc ListarCursosDeEstudiante(EstudianteRequest) returns (CursosList);
    rpc ListarEstudiantesDeCurso(CursoRequest) returns (EstudiantesList);
    rpc ListarTodosLosEstudiantes(google.protobuf.Empty) returns (EstudiantesList);
    rpc ListarTodosLosCursos(google.protobuf.Empty) returns (CursosList);
}